kubernetes/homebridge/templates/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homebridge
spec:
  replicas: 1
  serviceName: homebridge
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      containers:
        - name: homebridge
          image: oznu/homebridge:2022-07-08
          ports:
            - name: http
              containerPort: 8581
              protocol: TCP
          volumeMounts:
            - name: homebridge-data
              mountPath: /homebridge
          resources:
            requests:
              memory: "200Mi"
              cpu: "1000m"
            limits:
              memory: "1Gi"
              cpu: "1000m"

      # Performance critical workload, prefer SSD.
      # Add this once longhorn installed.
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: hunet.uk/disk
      #           operator: In
      #           values:
      #           - ssd

  volumeClaimTemplates:
    - metadata:
        name: homebridge-data
      spec:
        accessModes: ["ReadWriteOnce"]
        volumeMode: Filesystem
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
