kubernetes/homebridge/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
spec:
  selector:
    app: homebridge
  ports:
  - name: http
    port: 8581
