kubernetes/homebridge/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - homebridge.hunet.uk
    secretName: tls-cert-homebridge.hunet.uk
  rules:
  - host: homebridge.hunet.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homebridge
            port:
              number: 8581
